--- a/AppCondominio/Views/Clientes/Index.cshtml
+++ b/AppCondominio/Views/Clientes/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Clientes</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -18,9 +18,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.Cpf)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Locador)
-            </th>
             <th></th>
         </tr>
     </thead>
@@ -32,9 +29,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Cpf)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Locador.Documento)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
