--- a/AppCondominio/Views/Shared/_Layout.cshtml
+++ b/AppCondominio/Views/Shared/_Layout.cshtml
@@ -43,6 +43,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ControlesInOut" asp-action="Index">Controle Entrada e Saida</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Gastos" asp-action="Index">Gastos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
