--- a/AppCondominio/Views/Shared/_Layout.cshtml
+++ b/AppCondominio/Views/Shared/_Layout.cshtml
@@ -5,62 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - AppCondominio</title>
 
-    <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-    </environment>
-    <environment exclude="Development">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
-              crossorigin="anonymous"
-              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"/>
-    </environment>
+    <script src="~/js/scripts/moment.min.js"></script>
+    <script src="~/js/scripts/jquery.min.js"></script>
+    <script src="~/js/scripts/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+          asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
+          crossorigin="anonymous"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" />
+
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">AppCondominio</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Materiais" asp-action="Index">Materiais</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Fornecedores" asp-action="Index">Fornecedores</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Locadores" asp-action="Index">Locadores</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ControlesInOut" asp-action="Index">Controle Entrada e Saida</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Gastos" asp-action="Index">Gastos</a>
-                        </li>
-                    </ul>
-                </div>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
+            <div class="container no-margin">
+                <a class="navbar-brand color-white" asp-area="" asp-controller="Home" asp-action="Index">App Condominio</a>
             </div>
         </nav>
-    </header>
-    <div class="container">
-        <partial name="_CookieConsentPartial" />
-        <main role="main" class="pb-3">
+    </header><div class="wrapper">
+    <nav id="sidebar">
+        <div class="sidebar-header">
+            <h3>SGCC</h3>
+        </div>
+
+        <ul class="list-unstyled components">
+            <li>
+                <a asp-controller="Home" asp-action="index">Home</a>
+            </li>
+            <li>
+                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pessoas</a>
+                <ul class="collapse list-unstyled" id="homeSubmenu">
+                    <li>
+                        <a asp-controller="Clientes" asp-action="Index">Clientes</a>
+                    </li>
+                    <li>
+                        <a asp-controller="Locatarios" asp-action="Index">Locatarios</a>
+                    </li>
+                    <li>
+                        <a asp-controller="Locadores" asp-action="Index">Locadores</a>
+                    </li>
+                    <li>
+                        <a asp-controller="Fornecedores" asp-action="Index">Fornecedores</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Gerenciamento</a>
+                <ul class="collapse list-unstyled" id="pageSubmenu">
+                    <li >
+                        <a asp-controller="Materiais" asp-action="Index">Materiais</a>
+                    </li>
+                    <li>
+                        <a asp-controller="ControlesInOut" asp-action="Index">Controle Entrada e Saida</a>
+                    </li>
+                    <li>
+                        <a asp-controller="Gastos" asp-action="Index">Gastos</a>
+                    </li>
+                    <li>
+                        <a asp-controller="Contratos" asp-action="Index">Contratos</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+
+    </nav>
+    <div id="content" class="container container-main">
+
+        <div role="main" class="pb-3">
             @RenderBody()
-        </main>
+        </div>
     </div>
 
+</div>
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2019 - AppCondominio - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
