--- a/AppCondominio/Views/Locatarios/Index.cshtml
+++ b/AppCondominio/Views/Locatarios/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<AppCondominio.Models.Locador>
+﻿@model IEnumerable<AppCondominio.Models.Locatario>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Locadores</h1>
+<h1>Locatarios</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -45,8 +45,7 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
-                <a asp-action="Orcamento" asp-route-id="@item.Id">Orcamento</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
