--- a/AppCondominio/Views/Materiais/Edit.cshtml
+++ b/AppCondominio/Views/Materiais/Edit.cshtml
@@ -28,14 +28,9 @@
                 <span asp-validation-for="ValorUnitario" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="QuantidadeAtual" class="control-label"></label>
-                <input asp-for="QuantidadeAtual" type="number" step="1" class="form-control" />
-                <span asp-validation-for="QuantidadeAtual" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="QuantidadeTotal" class="control-label"></label>
-                <input asp-for="QuantidadeTotal" type="number" step="1" class="form-control" />
-                <span asp-validation-for="QuantidadeTotal" class="text-danger"></span>
+                <label asp-for="Quantidade" class="control-label"></label>
+                <input asp-for="Quantidade" type="number" step="1" class="form-control" />
+                <span asp-validation-for="Quantidade" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FornecedorID" class="control-label"></label>
