--- a/AppCondominio/wwwroot/css/site.css
+++ b/AppCondominio/wwwroot/css/site.css
@@ -1,56 +1,271 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+﻿html {
+    font-size: 14px;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  font-size: 14px;
-}
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .border-top {
-  border-top: 1px solid #e5e5e5;
+    border-top: 1px solid #e5e5e5;
 }
+
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
 button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+    font-size: 1rem;
+    line-height: inherit;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
 }
+
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    line-height: 60px; /* Vertically center the text there */
+}
+
+table, td {
+    color: black;
+}
+
+nav a.nav-link {
+    color: white !important;
+}
+
+nav.navbar {
+    height: 50px;
+    border-radius: unset;
+    background: #626262;
+    margin-bottom: 0px !important;
+}
+
+a.navbar-brand {
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
+}
+
+.btn {
+    background-image: none;
+}
+
+    .btn:focus {
+        color: white;
+    }
+
+.btn-warning {
+    background: #ff8300;
+}
+
+    .btn-warning:hover {
+        background: #dd6300;
+    }
+
+
+.btn-i {
+    width: 32px;
+    height: 32px;
+}
+
+    .btn-i.btn-danger {
+        background: darkred;
+    }
+
+    .btn-i.btn-warning {
+        background: #d0a20b;
+    }
+
+    .btn-i.btn-success {
+        background: darkgreen;
+    }
+
+thead.t-head {
+    color: #15135F;
+    background: #bbb;
+    line-height: 50px;
+}
+
+.table tbody tr td {
+    border-top: 2px solid gray;
+    background: #ddd;
+}
+
+tbody {
+    color: #ff8300;
+}
+
+.btn-laranja {
+    color: #212529;
+    background-color: #ff8300;
+    border-color: #ff8300;
+}
+
+    .btn-laranja:hover {
+        color: #212529;
+        background-color: #929292;
+        border-color: #929292;
+    }
+
+img.logo {
+    width: 180px;
+    height: 35px;
+}
+
+.container-main {
+    margin-top: 40px;
+}
+
+.footer {
+    background: #15135F;
+}
+
+.wrapper {
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+}
+
+.wrapper {
+    display: flex;
+    align-items: stretch;
+}
+
+#sidebar {
+    min-width: 250px;
+    max-width: 250px;
+}
+
+    #sidebar.active {
+        margin-left: -250px;
+    }
+
+#sidebar {
+    min-width: 250px;
+    max-width: 250px;
+    min-height: 100vh;
+}
+
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+.dropdown-toggle::after {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+}
+
+a, a:hover, a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+#sidebar {
+    /* don't forget to add all the previously mentioned styles here too */
+    background: #929292;
+    color: #fff;
+    transition: all 0.3s;
+}
+
+    #sidebar .sidebar-header {
+        padding: 20px;
+        background: #727272;
+    }
+
+    #sidebar ul.components {
+        padding: 20px 0;
+        border-bottom: 1px solid #727272;
+    }
+
+    #sidebar ul p {
+        color: #fff;
+        padding: 10px;
+    }
+
+    #sidebar ul li a {
+        padding: 10px;
+        font-size: 1.1em;
+        display: block;
+    }
+
+        #sidebar ul li a:hover {
+            color: #7386D5;
+            background: #fff;
+        }
+
+    #sidebar ul li.active > a, a[aria-expanded="true"] {
+        color: #fff;
+        background: #a2a2a2;
+    }
+
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+    background: #a2a2a2;
+}
+
+.row-h {
+    font-weight: 700;
+}
+
+.row-b {
+    border-top: solid 1px rgba(0,0,0,0.1);
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+    .row-b:hover {
+        background: rgba(0,0,0,0.1)
+    }
+
+div.container div.row {
+    margin: 10px;
+}
+
+.c-resumo {
+    padding: 10px;
+}
+
+.r-mes {
+    border: solid black 1px;
+    border-radius: 10px;
+    margin: 5px;
+}
+
+.no-padding {
+    padding: 0px;
+}
+
+.no-margin {
+    margin: 0px;
+}
+
+.color-white{
+    color: white !important;
 }
