--- a/AppCondominio/Views/ControlesInOut/Edit.cshtml
+++ b/AppCondominio/Views/ControlesInOut/Edit.cshtml
@@ -24,12 +24,16 @@
             </div>
             <div class="form-group">
                 <label asp-for="LocadorID" class="control-label"></label>
-                <select asp-for="LocadorID" class="form-control" asp-items="ViewBag.LocadorID"></select>
+                <select asp-for="LocadorID" class="form-control" asp-items="ViewBag.LocadorID">
+                    <option value="">Selecione um Locador</option>
+                </select>
                 <span asp-validation-for="LocadorID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ClienteID" class="control-label"></label>
-                <select asp-for="ClienteID" class="form-control" asp-items="ViewBag.ClienteID"></select>
+                <select asp-for="ClienteID" class="form-control" asp-items="ViewBag.ClienteID">
+                    <option value="">Selecione um Cliente</option>
+                </select>
                 <span asp-validation-for="ClienteID" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Id" />
