--- a/AppCondominio/Views/ControlesInOut/Index.cshtml
+++ b/AppCondominio/Views/ControlesInOut/Index.cshtml
@@ -37,10 +37,10 @@
                 @Html.DisplayFor(modelItem => item.DataSaida)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Locador.Documento)
+                @Html.DisplayFor(modelItem => item.Locador.Nome)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Cliente.Cpf)
+                @Html.DisplayFor(modelItem => item.Cliente.Nome)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
