--- a/AppCondominio/Views/Gastos/Edit.cshtml
+++ b/AppCondominio/Views/Gastos/Edit.cshtml
@@ -34,7 +34,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="LocadorID" class="control-label"></label>
-                <select asp-for="LocadorID" class="form-control" asp-items="ViewBag.LocadorID"></select>
+                <select asp-for="LocadorID" class="form-control" asp-items="ViewBag.LocadorID">
+                    <option value="">Selecione um Locador</option>
+                </select>
                 <span asp-validation-for="LocadorID" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Id" />
