--- a/AppCondominio/Views/Materiais/Edit.cshtml
+++ b/AppCondominio/Views/Materiais/Edit.cshtml
@@ -34,12 +34,16 @@
             </div>
             <div class="form-group">
                 <label asp-for="FornecedorID" class="control-label"></label>
-                <select asp-for="FornecedorID" class="form-control" asp-items="ViewBag.FornecedorID"></select>
+                <select asp-for="FornecedorID" class="form-control" asp-items="ViewBag.FornecedorID">
+                    <option value="">Selecione um Fornecedor</option>
+                </select>
                 <span asp-validation-for="FornecedorID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="LocadorID" class="control-label"></label>
-                <select asp-for="LocadorID" class="form-control" asp-items="ViewBag.LocadorID"></select>
+                <select asp-for="LocadorID" class="form-control" asp-items="ViewBag.LocadorID">
+                    <option value="">Selecione um Locador</option>
+                </select>
                 <span asp-validation-for="LocadorID" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Id" />
